--- a/Tutorial Mozilla/style.css
+++ b/Tutorial Mozilla/style.css
@@ -9,11 +9,11 @@ body {
     margin: 0 auto;    
 }
 
-main {
+/*main {
     background-color: #a044ff;;
     box-shadow: 0.1rem 0.1rem 1px #000;
 }
-
+*/
 .ultimoResultado {
     color: white;
     padding: 3px;
